--- a/app/locale/en_US/Mage_Sitemap.csv
+++ b/app/locale/en_US/Mage_Sitemap.csv
@@ -18,6 +18,7 @@
 "Google Sitemap","Google Sitemap"
 "Hourly","Hourly"
 "ID","ID"
+"Include Images","Include Images"
 "Last Time Generated","Last Time Generated"
 "Link for Google","Link for Google"
 "Maximum URLs per Sitemap File","Maximum URLs per Sitemap File"
