--- a/app/locale/en_US/Maho_Blog.csv
+++ b/app/locale/en_US/Maho_Blog.csv
@@ -13,6 +13,7 @@
 "Enable Blog Search in Autosuggest","Enable Blog Search in Autosuggest"
 "Get post info","Get post info"
 "Get post list","Get post list"
+"Include Images","Include Images"
 "INDEX, FOLLOW","INDEX, FOLLOW"
 "INDEX, NOFOLLOW","INDEX, NOFOLLOW"
 "Maximum Blog Posts in Autosuggest","Maximum Blog Posts in Autosuggest"
