--- a/app/locale/en_US/Mage_Sitemap.csv
+++ b/app/locale/en_US/Mage_Sitemap.csv
@@ -18,8 +18,10 @@
 "Google Sitemap","Google Sitemap"
 "Hourly","Hourly"
 "ID","ID"
+"Include Images","Include Images"
 "Last Time Generated","Last Time Generated"
 "Link for Google","Link for Google"
+"Maximum URLs per Sitemap File","Maximum URLs per Sitemap File"
 "Monthly","Monthly"
 "Never","Never"
 "New Sitemap","New Sitemap"
@@ -34,6 +36,7 @@
 "Show lastmod","Show lastmod"
 "Sitemap","Sitemap"
 "Sitemap generate Warnings","Sitemap generate Warnings"
+"Split sitemap files when they exceed this number of URLs","Split sitemap files when they exceed this number of URLs"
 "Start Time","Start Time"
 "Store View","Store View"
 "The priority must be between 0 and 1.","The priority must be between 0 and 1."
