--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -10,6 +10,7 @@
 "Are you sure?","Are you sure?"
 "Are you sure you want to refresh this segment?","Are you sure you want to refresh this segment?"
 "Assign to Website","Assign to Website"
+"Bundle Product","Bundle Product"
 "Automatic","Automatic"
 "Automatic: Refreshed daily via cron. Manual: Must be refreshed manually.","Automatic: Refreshed daily via cron. Manual: Must be refreshed manually."
 "Average Days Between Orders","Average Days Between Orders"
@@ -22,6 +23,7 @@
 "Cart Updated Date","Cart Updated Date"
 "Change status","Change status"
 "Completed","Completed"
+"Configurable Product","Configurable Product"
 "Conditions (leave blank for all customers)","Conditions (leave blank for all customers)"
 "Customer","Customer"
 "Customer Lifetime Value","Customer Lifetime Value"
@@ -41,11 +43,13 @@
 "Days Until Birthday","Days Until Birthday"
 "Days Without Purchase","Days Without Purchase"
 "Delete Segment","Delete Segment"
+"Downloadable Product","Downloadable Product"
 "Delete Segments","Delete Segments"
 "Edit Segment","Edit Segment"
 "Edit Segment '%s'","Edit Segment '%s'"
 "First Viewed Date","First Viewed Date"
 "General Properties","General Properties"
+"Grouped Product","Grouped Product"
 "If %s %s %s","If %s %s %s"
 "Is Subscribed","Is Subscribed"
 "Items Count","Items Count"
@@ -76,6 +80,7 @@
 "Please select segment(s).","Please select segment(s)."
 "Postal Code","Postal Code"
 "Product: %s","Product: %s"
+"Product Type","Product Type"
 "Purchase Date","Purchase Date"
 "Quantity in Cart","Quantity in Cart"
 "Refresh Mode","Refresh Mode"
@@ -84,6 +89,7 @@
 "Save Segment","Save Segment"
 "Save Segments","Save Segments"
 "Segment Information","Segment Information"
+"Simple Product","Simple Product"
 "Segment Name","Segment Name"
 "Segment name is required.","Segment name is required."
 "Segment Refresh Cron Schedule","Segment Refresh Cron Schedule"
@@ -100,6 +106,7 @@
 "Total Ordered Amount","Total Ordered Amount"
 "Unable to find a segment to refresh.","Unable to find a segment to refresh."
 "View","View"
+"Virtual Product","Virtual Product"
 "View Count","View Count"
 "View Customers in Segment","View Customers in Segment"
 "Viewed","Viewed"
