--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -80,7 +80,10 @@
 "Product Type","Product Type"
 "Purchase Date","Purchase Date"
 "Quantity in Cart","Quantity in Cart"
+"Quantity Ordered","Quantity Ordered"
 "Refresh Mode","Refresh Mode"
+"Row Total","Row Total"
+"Row Total (Inc. Tax)","Row Total (Inc. Tax)"
 "Refresh Segments","Refresh Segments"
 "Save and Continue Edit","Save and Continue Edit"
 "Save Segment","Save Segment"
