Added `Customer Segmentation` module with rule-based targeting (#286)

--- a/app/locale/en_US/Mage_Newsletter.csv
+++ b/app/locale/en_US/Mage_Newsletter.csv
@@ -17,6 +17,7 @@
 "Customer Last Name","Customer Last Name"
 "Customer Middle Name","Customer Middle Name"
 "Customer My Account Newsletter Subscriptions","Customer My Account Newsletter Subscriptions"
+"Customer Segments","Customer Segments"
 "Date Added","Date Added"
 "Date Updated","Date Updated"
 "Default Template","Default Template"
