--- a/app/locale/en_US/Mage_ImportExport.csv
+++ b/app/locale/en_US/Mage_ImportExport.csv
@@ -13,8 +13,12 @@
 "Can not determine attribute filter type","Can not determine attribute filter type"
 "Can not find required columns: %s","Can not find required columns: %s"
 "Cannot get autoincrement value","Cannot get autoincrement value"
+"Categories","Categories"
+"Category path ""%s"" is invalid","Category path ""%s"" is invalid"
+"Category path is empty","Category path is empty"
 "Check Data","Check Data"
 "Checked rows: %d, checked entities: %d, invalid rows: %d, total errors: %d","Checked rows: %d, checked entities: %d, invalid rows: %d, total errors: %d"
+"Circular reference detected in category path ""%s""","Circular reference detected in category path ""%s"""
 "Column names: ""%s"" are invalid","Column names: ""%s"" are invalid"
 "Column names have duplicates","Column names have duplicates"
 "Column names is empty or is not an array","Column names is empty or is not an array"
@@ -26,6 +30,7 @@
 "Destination file is not writable","Destination file is not writable"
 "Destination file path must be a string","Destination file path must be a string"
 "Done import data validation","Done import data validation"
+"Duplicate category path ""%s"" found","Duplicate category path ""%s"" found"
 "Duplicate Unique Attribute for '%s'","Duplicate Unique Attribute for '%s'"
 "Entity adapter obejct must be an instance of Mage_ImportExport_Model_Export_Entity_Abstract","Entity adapter obejct must be an instance of Mage_ImportExport_Model_Export_Entity_Abstract"
 "Entity adapter object must be an instance of Mage_ImportExport_Model_Import_Entity_Abstract","Entity adapter object must be an instance of Mage_ImportExport_Model_Import_Entity_Abstract"
@@ -64,6 +69,7 @@
 "Input entity code is not equal to entity adapter code","Input entity code is not equal to entity adapter code"
 "in rows","in rows"
 "in rows:","in rows:"
+"Invalid category name for path ""%s""","Invalid category name for path ""%s"""
 "Invalid entity","Invalid entity"
 "Invalid entity model","Invalid entity model"
 "Invalid file format","Invalid file format"
@@ -77,6 +83,7 @@
 "Not implemented yet","Not implemented yet"
 "No valid data sent","No valid data sent"
 "No writer specified","No writer specified"
+"Parent category for path ""%s"" not found","Parent category for path ""%s"" not found"
 "Please fix errors and re-upload file","Please fix errors and re-upload file"
 "Please fix errors and re-upload file or simply press ""Import"" button to skip rows with errors","Please fix errors and re-upload file or simply press ""Import"" button to skip rows with errors"
 "Products","Products"
