--- a/app/locale/en_US/Mage_ImportExport.csv
+++ b/app/locale/en_US/Mage_ImportExport.csv
@@ -28,6 +28,7 @@
 "Destination file path must be a string","Destination file path must be a string"
 "Done import data validation","Done import data validation"
 "Duplicate Unique Attribute for '%s'","Duplicate Unique Attribute for '%s'"
+"Each data row must be an array","Each data row must be an array"
 "Entity adapter obejct must be an instance of Mage_ImportExport_Model_Export_Entity_Abstract","Entity adapter obejct must be an instance of Mage_ImportExport_Model_Export_Entity_Abstract"
 "Entity adapter object must be an instance of Mage_ImportExport_Model_Import_Entity_Abstract","Entity adapter object must be an instance of Mage_ImportExport_Model_Import_Entity_Abstract"
 "Entity is unknown","Entity is unknown"
@@ -70,8 +71,11 @@
 "Invalid file format","Invalid file format"
 "Invalid parameters","Invalid parameters"
 "Invalid seek position","Invalid seek position"
+"Invalid seek position: %d","Invalid seek position: %d"
 "Invalid value for '%s'","Invalid value for '%s'"
 "Invalid value for '%s' column","Invalid value for '%s' column"
+"No data provided for import","No data provided for import"
+"No data rows found after header processing","No data rows found after header processing"
 "Node does not has model token tag","Node does not has model token tag"
 "No filter data provided","No filter data provided"
 "No source specified","No source specified"
@@ -82,11 +86,15 @@
 "Please fix errors and re-upload file or simply press ""Import"" button to skip rows with errors","Please fix errors and re-upload file or simply press ""Import"" button to skip rows with errors"
 "Products","Products"
 "Replace Existing Complex Data","Replace Existing Complex Data"
+"Row %d is not an array","Row %d is not an array"
+"Row %d missing columns: %s","Row %d missing columns: %s"
 "Select File to Import","Select File to Import"
 "Skip","Skip"
+"Source data array cannot be empty","Source data array cannot be empty"
+"Source data must be an array","Source data must be an array"
 "Source file moving failed","Source file moving failed"
-"Source file path must be a string","Source file path must be a string"
 "Source is not set","Source is not set"
+"Source must be a string file path or array","Source must be a string file path or array"
 "Status","Status"
 "There are no product types available for export","There are no product types available for export"
 "There is no data for export","There is no data for export"
