Rewrote `system/config/js.phtml` without prototypejs (#315)

--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -452,7 +452,6 @@
 "Number of results","Number of results"
 "Number of results (For the last time placed)","Number of results (For the last time placed)"
 "Number of Uses","Number of Uses"
-"OK","OK"
 "On Gesture","On Gesture"
 "Option:","Option:"
 "Options","Options"
@@ -780,6 +779,7 @@
 "Use Flat Catalog Category","Use Flat Catalog Category"
 "Use Flat Catalog Product","Use Flat Catalog Product"
 "Use for Promo Rule Conditions","Use for Promo Rule Conditions"
+"Use four-digit year format. Used for min/max attributes on native date inputs.","Use four-digit year format. Used for min/max attributes on native date inputs."
 "Use in Advanced Search","Use in Advanced Search"
 "Use In Layered Navigation","Use In Layered Navigation"
 "Use in Layered Navigation","Use in Layered Navigation"
