Removed unused paypal backend related files

--- a/app/locale/en_US/Mage_Paypal.csv
+++ b/app/locale/en_US/Mage_Paypal.csv
@@ -333,7 +333,7 @@
 "Payments Standard","Payments Standard"
 "Payments Standard (Includes Express Checkout)","Payments Standard (Includes Express Checkout)"
 "Payment transactions disallow storing objects.","Payment transactions disallow storing objects."
-"PayPal All-in-One Payment Solutions&nbsp;&nbsp;<i>Accept and process credit cards and PayPal payments.</i>","PayPal All-in-One Payment Solutions&nbsp;&nbsp;<i>Accept and process credit cards and PayPal payments.</i>"
+"PayPal All-in-One Payment Solutions","PayPal All-in-One Payment Solutions"
 "PayPal Balance Manager function of PayPal account","PayPal Balance Manager function of PayPal account"
 "PayPal Billing Agreement Settings","PayPal Billing Agreement Settings"
 "PayPal Buyer Warranty Bonus","PayPal Buyer Warranty Bonus"
