--- a/app/locale/en_US/Mage_Core.csv
+++ b/app/locale/en_US/Mage_Core.csv
@@ -411,3 +411,39 @@
 "Yes","Yes"
 "Your design change for the specified store intersects with another one, please specify another date range.","Your design change for the specified store intersects with another one, please specify another date range."
 "You will have to log in after you save your custom admin path.","You will have to log in after you save your custom admin path."
+"Rate limit","Rate limit"
+"This functionality limits the number of requests a user (identified by IP address) can perform within a specific time frame, preventing excessive resources usage and maintaining system performance, stability and security.","This functionality limits the number of requests a user (identified by IP address) can perform within a specific time frame, preventing excessive resources usage and maintaining system performance, stability and security."
+"Timeframe","Timeframe"
+"Number of seconds between each allowed request.","Number of seconds between each allowed request."
+"Minimum Log Severity","Minimum Log Severity"
+"Only messages at this severity level or higher will be logged. For example, selecting ""Error"" will log Error, Critical, Alert, and Emergency messages, but not Warning, Notice, Info, or Debug. Note: Developer mode overrides this setting and logs all levels.","Only messages at this severity level or higher will be logged. For example, selecting ""Error"" will log Error, Critical, Alert, and Emergency messages, but not Warning, Notice, Info, or Debug. Note: Developer mode overrides this setting and logs all levels."
+"CSS Settings","CSS Settings"
+"Minify CSS Files","Minify CSS Files"
+"Minifies CSS files and caches them in media/mahominify for improved performance","Minifies CSS files and caches them in media/mahominify for improved performance"
+"Minify JavaScript Files","Minify JavaScript Files"
+"Minifies JavaScript files and caches them in media/mahominify for improved performance","Minifies JavaScript files and caches them in media/mahominify for improved performance"
+"<strong>Disabled:</strong> No deferral (default behavior)<br/><strong>Defer Only:</strong> Moves all script tags to the end of the page, improving initial render performance<br/><strong>Load on Intent:</strong> <strong style=\"color:red\">Highly Experimental!</strong> Defers all scripts until user interaction (click, scroll, hover, etc.) - designed for pure vanilla JavaScript and may not work with legacy JavaScript libraries","<strong>Disabled:</strong> No deferral (default behavior)<br/><strong>Defer Only:</strong> Moves all script tags to the end of the page, improving initial render performance<br/><strong>Load on Intent:</strong> <strong style=\"color:red\">Highly Experimental!</strong> Defers all scripts until user interaction (click, scroll, hover, etc.) - designed for pure vanilla JavaScript and may not work with legacy JavaScript libraries"
+"Allow Countries","Allow Countries"
+"Transport","Transport"
+"Image quality","Image quality"
+"Number from 0 to 100 (default is 85, recommended by Google). Higher values preserve more details but increase file size. For WebP format, you can also use 101 to enable lossless compression.","Number from 0 to 100 (default is 85, recommended by Google). Higher values preserve more details but increase file size. For WebP format, you can also use 101 to enable lossless compression."
+"After selecting a new media storage location, press the Synchronize button
+                                to transfer all media to that location. Media will not be available in the new
+                                location until the synchronization process is complete.","After selecting a new media storage location, press the Synchronize button
+                                to transfer all media to that location. Media will not be available in the new
+                                location until the synchronization process is complete."
+"Admin Theme","Admin Theme"
+"Enable global search","Enable global search"
+"Make sure that base URL ends with '/' (slash), e.g. http://yourdomain/maho/","Make sure that base URL ends with '/' (slash), e.g. http://yourdomain/maho/"
+"Enable HSTS (HTTP Strict Transport Security)","Enable HSTS (HTTP Strict Transport Security)"
+"Forces browsers to use HTTPS. Only works on HTTPS connections.","Forces browsers to use HTTPS. Only works on HTTPS connections."
+"HSTS Max Age (seconds)","HSTS Max Age (seconds)"
+"How long browsers should remember to use HTTPS. Default: 31536000 (1 year)","How long browsers should remember to use HTTPS. Default: 31536000 (1 year)"
+"Enable X-Content-Type-Options","Enable X-Content-Type-Options"
+"Prevents browsers from MIME-sniffing responses. Recommended for security.","Prevents browsers from MIME-sniffing responses. Recommended for security."
+"Enable X-XSS-Protection","Enable X-XSS-Protection"
+"Enables browser XSS filtering. Note: Modern browsers prefer CSP over this header.","Enables browser XSS filtering. Note: Modern browsers prefer CSP over this header."
+"Referrer Policy","Referrer Policy"
+"Controls how much referrer information is sent with requests","Controls how much referrer information is sent with requests"
+"Without this setting, a page could be accessible with both URLs: ""example.com/category"" and ""example.com/category/"". This creates duplicate content issues for SEO. Use this setting to automatically redirect to a canonical URL format.","Without this setting, a page could be accessible with both URLs: ""example.com/category"" and ""example.com/category/"". This creates duplicate content issues for SEO. Use this setting to automatically redirect to a canonical URL format."
+"""Remember Me"" Cookie Lifetime","""Remember Me"" Cookie Lifetime"
