--- a/app/locale/en_US/Mage_Core.csv
+++ b/app/locale/en_US/Mage_Core.csv
@@ -1,7 +1,9 @@
+"""Remember Me"" Cookie Lifetime","""Remember Me"" Cookie Lifetime"
 "%s","%s"
 "%s already exist.","%s already exist."
 "%s already exists.","%s already exists."
 "-- Please Select --","-- Please Select --"
+"<strong>Disabled:</strong> No deferral (default behavior)<br/><strong>Defer Only:</strong> Moves all script tags to the end of the page, improving initial render performance<br/><strong>Load on Intent:</strong> <strong style=""color:red"">Highly Experimental!</strong> Defers all scripts until user interaction (click, scroll, hover, etc.) - designed for pure vanilla JavaScript and may not work with legacy JavaScript libraries","<strong>Disabled:</strong> No deferral (default behavior)<br/><strong>Defer Only:</strong> Moves all script tags to the end of the page, improving initial render performance<br/><strong>Load on Intent:</strong> <strong style=""color:red"">Highly Experimental!</strong> Defers all scripts until user interaction (click, scroll, hover, etc.) - designed for pure vanilla JavaScript and may not work with legacy JavaScript libraries"
 "<strong style=""color:red"">Warning!</strong> When using CDN, in some cases JavaScript may not run properly if CDN is not in your subdomain","<strong style=""color:red"">Warning!</strong> When using CDN, in some cases JavaScript may not run properly if CDN is not in your subdomain"
 "<strong style=""color:red"">Warning!</strong> When using Store Code in URLs, in some cases system may not work properly if URLs without Store Codes are specified in the third party services (e.g. PayPal etc.).","<strong style=""color:red"">Warning!</strong> When using Store Code in URLs, in some cases system may not work properly if URLs without Store Codes are specified in the third party services (e.g. PayPal etc.)."
 "A category object is required for determining the product request path.","A category object is required for determining the product request path."
@@ -10,9 +12,12 @@
 "Add Store Code to Urls","Add Store Code to Urls"
 "Admin","Admin"
 "Admin Base URL","Admin Base URL"
+"Admin Theme","Admin Theme"
 "Admin User Emails","Admin User Emails"
 "Advanced","Advanced"
 "Advanced Cache Settings","Advanced Cache Settings"
+"After selecting a new media storage location, press the Synchronize button
+"Allow Countries","Allow Countries"
 "Allowed file types: ICO, PNG, GIF, JPG, JPEG, APNG. Not all browsers support all these formats!","Allowed file types: ICO, PNG, GIF, JPG, JPEG, APNG. Not all browsers support all these formats!"
 "Allowed IPs (comma separated)","Allowed IPs (comma separated)"
 "Allow Maho Backend to run in frame","Allow Maho Backend to run in frame"
@@ -51,6 +56,7 @@
 "Card type does not match credit card number.","Card type does not match credit card number."
 "Code","Code"
 "Controller file was loaded but class does not exist","Controller file was loaded but class does not exist"
+"Controls how much referrer information is sent with requests","Controls how much referrer information is sent with requests"
 "Cookie Domain","Cookie Domain"
 "Cookie Lifetime","Cookie Lifetime"
 "Cookie Path","Cookie Path"
@@ -64,6 +70,7 @@
 "Create Website","Create Website"
 "Credit card number does not match credit card type.","Credit card number does not match credit card type."
 "Cron Expression for Cache Flushing","Cron Expression for Cache Flushing"
+"CSS Settings","CSS Settings"
 "Current Package Name","Current Package Name"
 "Custom1 Contact Email","Custom1 Contact Email"
 "Custom1 Contact Name","Custom1 Contact Name"
@@ -121,6 +128,11 @@
 "Enabled","Enabled"
 "Enabled for Admin","Enabled for Admin"
 "Enabled for Frontend","Enabled for Frontend"
+"Enable global search","Enable global search"
+"Enable HSTS (HTTP Strict Transport Security)","Enable HSTS (HTTP Strict Transport Security)"
+"Enables browser XSS filtering. Note: Modern browsers prefer CSP over this header.","Enables browser XSS filtering. Note: Modern browsers prefer CSP over this header."
+"Enable X-Content-Type-Options","Enable X-Content-Type-Options"
+"Enable X-XSS-Protection","Enable X-XSS-Protection"
 "Enabling ability to run Maho in a frame is not recommended for security reasons.","Enabling ability to run Maho in a frame is not recommended for security reasons."
 "Error in file: ""%s"" - %s","Error in file: ""%s"" - %s"
 "European Union Countries","European Union Countries"
@@ -136,6 +148,7 @@
 "Flush & Apply Updates","Flush & Apply Updates"
 "Flush Cache Storage","Flush Cache Storage"
 "Footer","Footer"
+"Forces browsers to use HTTPS. Only works on HTTPS connections.","Forces browsers to use HTTPS. Only works on HTTPS connections."
 "Forgot Password Email Sender","Forgot Password Email Sender"
 "Forgot Password Email Template","Forgot Password Email Template"
 "Frontend","Frontend"
@@ -149,12 +162,15 @@
 "Header","Header"
 "Helper attributes should not be used in custom layout updates.","Helper attributes should not be used in custom layout updates."
 "Host","Host"
+"How long browsers should remember to use HTTPS. Default: 31536000 (1 year)","How long browsers should remember to use HTTPS. Default: 31536000 (1 year)"
 "How many links to display at once.","How many links to display at once."
+"HSTS Max Age (seconds)","HSTS Max Age (seconds)"
 "HTML filtration has failed.","HTML filtration has failed."
 "HTML Head","HTML Head"
 "HTML tags are not allowed","HTML tags are not allowed"
 "ID Path for Specified Store","ID Path for Specified Store"
 "If the current frame position does not cover utmost pages, will render link to current position plus/minus this value.","If the current frame position does not cover utmost pages, will render link to current position plus/minus this value."
+"Image quality","Image quality"
 "Incorrect credit card expiration date.","Incorrect credit card expiration date."
 "Invalid base url type","Invalid base url type"
 "Invalid block: %s","Invalid block: %s"
@@ -183,6 +199,8 @@
 "Load on Intent","Load on Intent"
 "Locale","Locale"
 "Locale Options","Locale Options"
+                                location until the synchronization process is complete.","After selecting a new media storage location, press the Synchronize button
+                                location until the synchronization process is complete."
 "Login is Case Sensitive","Login is Case Sensitive"
 "Logo Image","Logo Image"
 "Logo Image Alt","Logo Image Alt"
@@ -191,10 +209,16 @@
 "Maho info","Maho info"
 "Maho info API","Maho info API"
 "Mail Sending Settings","Mail Sending Settings"
+"Make sure that base URL ends with '/' (slash), e.g. http://yourdomain/maho/","Make sure that base URL ends with '/' (slash), e.g. http://yourdomain/maho/"
 "Manage Stores","Manage Stores"
 "Match expressions in the same order as displayed in the configuration.","Match expressions in the same order as displayed in the configuration."
 "Media Storage","Media Storage"
 "Message recipients data must be set.","Message recipients data must be set."
+"Minifies CSS files and caches them in media/mahominify for improved performance","Minifies CSS files and caches them in media/mahominify for improved performance"
+"Minifies JavaScript files and caches them in media/mahominify for improved performance","Minifies JavaScript files and caches them in media/mahominify for improved performance"
+"Minify CSS Files","Minify CSS Files"
+"Minify JavaScript Files","Minify JavaScript Files"
+"Minimum Log Severity","Minimum Log Severity"
 "Miscellaneous HTML","Miscellaneous HTML"
 "Miscellaneous Scripts","Miscellaneous Scripts"
 "Model collection resource name is not defined.","Model collection resource name is not defined."
@@ -209,8 +233,11 @@
 "New Website","New Website"
 "No","No"
 "None","None"
+"Number from 0 to 100 (default is 85, recommended by Google). Higher values preserve more details but increase file size. For WebP format, you can also use 101 to enable lossless compression.","Number from 0 to 100 (default is 85, recommended by Google). Higher values preserve more details but increase file size. For WebP format, you can also use 101 to enable lossless compression."
 "Number of milliseconds to delay showing the loading indicator. The default value is ""200"". An empty value disables the delay.","Number of milliseconds to delay showing the loading indicator. The default value is ""200"". An empty value disables the delay."
+"Number of seconds between each allowed request.","Number of seconds between each allowed request."
 "Offloader header","Offloader header"
+"Only messages at this severity level or higher will be logged. For example, selecting ""Error"" will log Error, Critical, Alert, and Emergency messages, but not Warning, Notice, Info, or Debug. Note: Developer mode overrides this setting and logs all levels.","Only messages at this severity level or higher will be logged. For example, selecting ""Error"" will log Error, Critical, Alert, and Emergency messages, but not Warning, Notice, Info, or Debug. Note: Developer mode overrides this setting and logs all levels."
 "Package","Package"
 "Pagination","Pagination"
 "Pagination Frame","Pagination Frame"
@@ -270,8 +297,11 @@
 "Please use this date format: dd/mm/yyyy. For example 17/03/2006 for the 17th of March, 2006.","Please use this date format: dd/mm/yyyy. For example 17/03/2006 for the 17th of March, 2006."
 "Please wait, loading...","Please wait, loading..."
 "Port","Port"
+"Prevents browsers from MIME-sniffing responses. Recommended for security.","Prevents browsers from MIME-sniffing responses. Recommended for security."
 "Profiler","Profiler"
+"Rate limit","Rate limit"
 "Recovery Link Expiration Period (hours)","Recovery Link Expiration Period (hours)"
+"Referrer Policy","Referrer Policy"
 "Requested invalid store ""%s""","Requested invalid store ""%s"""
 "Request Path for Specified Store","Request Path for Specified Store"
 "Request path length exceeds allowed %s symbols.","Request path length exceeds allowed %s symbols."
@@ -350,6 +380,7 @@
 "This category and its products only","This category and its products only"
 "This category only","This category only"
 "This date is a required value.","This date is a required value."
+"This functionality limits the number of requests a user (identified by IP address) can perform within a specific time frame, preventing excessive resources usage and maintaining system performance, stability and security.","This functionality limits the number of requests a user (identified by IP address) can perform within a specific time frame, preventing excessive resources usage and maintaining system performance, stability and security."
 "This is a required field.","This is a required field."
 "This setting enable notification when new admin user created.","This setting enable notification when new admin user created."
 "This store cannot be deleted.","This store cannot be deleted."
@@ -357,14 +388,18 @@
 "This website cannot be deleted.","This website cannot be deleted."
 "This will be displayed just before body closing tag.","This will be displayed just before body closing tag."
 "This will be included before head closing tag in page HTML.","This will be included before head closing tag in page HTML."
+"Timeframe","Timeframe"
 "Timezone","Timezone"
 "Title Prefix","Title Prefix"
 "Title Suffix","Title Suffix"
 "Too Soon: You are trying to perform this operation too frequently. Please wait a few seconds and try again.","Too Soon: You are trying to perform this operation too frequently. Please wait a few seconds and try again."
+                                to transfer all media to that location. Media will not be available in the new
+                                to transfer all media to that location. Media will not be available in the new
 "Transactional Emails","Transactional Emails"
 "Translate, blocks and other output caches should be disabled for both frontend and admin inline translations.","Translate, blocks and other output caches should be disabled for both frontend and admin inline translations."
 "Translate Inline","Translate Inline"
 "Translations","Translations"
+"Transport","Transport"
 "Two and more slashes together are not permitted in request path","Two and more slashes together are not permitted in request path"
 "Two and more slashes together are not permitted in url rewrite suffix","Two and more slashes together are not permitted in url rewrite suffix"
 "Unable to create directory: %s","Unable to create directory: %s"
@@ -403,6 +438,7 @@
 "Website with the same code","Website with the same code"
 "Weekend Days","Weekend Days"
 "Welcome Text","Welcome Text"
+"Without this setting, a page could be accessible with both URLs: ""example.com/category"" and ""example.com/category/"". This creates duplicate content issues for SEO. Use this setting to automatically redirect to a canonical URL format.","Without this setting, a page could be accessible with both URLs: ""example.com/category"" and ""example.com/category/"". This creates duplicate content issues for SEO. Use this setting to automatically redirect to a canonical URL format."
 "Wrong file info format","Wrong file info format"
 "Wrong number of arguments for %s","Wrong number of arguments for %s"
 "Wrong old style column type definition: {$definition}.","Wrong old style column type definition: {$definition}."
@@ -411,39 +447,3 @@
 "Yes","Yes"
 "Your design change for the specified store intersects with another one, please specify another date range.","Your design change for the specified store intersects with another one, please specify another date range."
 "You will have to log in after you save your custom admin path.","You will have to log in after you save your custom admin path."
-"Rate limit","Rate limit"
-"This functionality limits the number of requests a user (identified by IP address) can perform within a specific time frame, preventing excessive resources usage and maintaining system performance, stability and security.","This functionality limits the number of requests a user (identified by IP address) can perform within a specific time frame, preventing excessive resources usage and maintaining system performance, stability and security."
-"Timeframe","Timeframe"
-"Number of seconds between each allowed request.","Number of seconds between each allowed request."
-"Minimum Log Severity","Minimum Log Severity"
-"Only messages at this severity level or higher will be logged. For example, selecting ""Error"" will log Error, Critical, Alert, and Emergency messages, but not Warning, Notice, Info, or Debug. Note: Developer mode overrides this setting and logs all levels.","Only messages at this severity level or higher will be logged. For example, selecting ""Error"" will log Error, Critical, Alert, and Emergency messages, but not Warning, Notice, Info, or Debug. Note: Developer mode overrides this setting and logs all levels."
-"CSS Settings","CSS Settings"
-"Minify CSS Files","Minify CSS Files"
-"Minifies CSS files and caches them in media/mahominify for improved performance","Minifies CSS files and caches them in media/mahominify for improved performance"
-"Minify JavaScript Files","Minify JavaScript Files"
-"Minifies JavaScript files and caches them in media/mahominify for improved performance","Minifies JavaScript files and caches them in media/mahominify for improved performance"
-"<strong>Disabled:</strong> No deferral (default behavior)<br/><strong>Defer Only:</strong> Moves all script tags to the end of the page, improving initial render performance<br/><strong>Load on Intent:</strong> <strong style=\"color:red\">Highly Experimental!</strong> Defers all scripts until user interaction (click, scroll, hover, etc.) - designed for pure vanilla JavaScript and may not work with legacy JavaScript libraries","<strong>Disabled:</strong> No deferral (default behavior)<br/><strong>Defer Only:</strong> Moves all script tags to the end of the page, improving initial render performance<br/><strong>Load on Intent:</strong> <strong style=\"color:red\">Highly Experimental!</strong> Defers all scripts until user interaction (click, scroll, hover, etc.) - designed for pure vanilla JavaScript and may not work with legacy JavaScript libraries"
-"Allow Countries","Allow Countries"
-"Transport","Transport"
-"Image quality","Image quality"
-"Number from 0 to 100 (default is 85, recommended by Google). Higher values preserve more details but increase file size. For WebP format, you can also use 101 to enable lossless compression.","Number from 0 to 100 (default is 85, recommended by Google). Higher values preserve more details but increase file size. For WebP format, you can also use 101 to enable lossless compression."
-"After selecting a new media storage location, press the Synchronize button
-                                to transfer all media to that location. Media will not be available in the new
-                                location until the synchronization process is complete.","After selecting a new media storage location, press the Synchronize button
-                                to transfer all media to that location. Media will not be available in the new
-                                location until the synchronization process is complete."
-"Admin Theme","Admin Theme"
-"Enable global search","Enable global search"
-"Make sure that base URL ends with '/' (slash), e.g. http://yourdomain/maho/","Make sure that base URL ends with '/' (slash), e.g. http://yourdomain/maho/"
-"Enable HSTS (HTTP Strict Transport Security)","Enable HSTS (HTTP Strict Transport Security)"
-"Forces browsers to use HTTPS. Only works on HTTPS connections.","Forces browsers to use HTTPS. Only works on HTTPS connections."
-"HSTS Max Age (seconds)","HSTS Max Age (seconds)"
-"How long browsers should remember to use HTTPS. Default: 31536000 (1 year)","How long browsers should remember to use HTTPS. Default: 31536000 (1 year)"
-"Enable X-Content-Type-Options","Enable X-Content-Type-Options"
-"Prevents browsers from MIME-sniffing responses. Recommended for security.","Prevents browsers from MIME-sniffing responses. Recommended for security."
-"Enable X-XSS-Protection","Enable X-XSS-Protection"
-"Enables browser XSS filtering. Note: Modern browsers prefer CSP over this header.","Enables browser XSS filtering. Note: Modern browsers prefer CSP over this header."
-"Referrer Policy","Referrer Policy"
-"Controls how much referrer information is sent with requests","Controls how much referrer information is sent with requests"
-"Without this setting, a page could be accessible with both URLs: ""example.com/category"" and ""example.com/category/"". This creates duplicate content issues for SEO. Use this setting to automatically redirect to a canonical URL format.","Without this setting, a page could be accessible with both URLs: ""example.com/category"" and ""example.com/category/"". This creates duplicate content issues for SEO. Use this setting to automatically redirect to a canonical URL format."
-"""Remember Me"" Cookie Lifetime","""Remember Me"" Cookie Lifetime"
