--- a/app/locale/en_US/Mage_Core.csv
+++ b/app/locale/en_US/Mage_Core.csv
@@ -16,11 +16,7 @@
 "Admin User Emails","Admin User Emails"
 "Advanced","Advanced"
 "Advanced Cache Settings","Advanced Cache Settings"
-"After selecting a new media storage location, press the Synchronize button
-                                to transfer all media to that location. Media will not be available in the new
-                                location until the synchronization process is complete.","After selecting a new media storage location, press the Synchronize button
-                                to transfer all media to that location. Media will not be available in the new
-                                location until the synchronization process is complete."
+"After selecting a new media storage location, press the Synchronize button to transfer all media to that location. Media will not be available in the new location until the synchronization process is complete.","After selecting a new media storage location, press the Synchronize button to transfer all media to that location. Media will not be available in the new location until the synchronization process is complete."
 "Allow Countries","Allow Countries"
 "Allowed file types: ICO, PNG, GIF, JPG, JPEG, APNG. Not all browsers support all these formats!","Allowed file types: ICO, PNG, GIF, JPG, JPEG, APNG. Not all browsers support all these formats!"
 "Allowed IPs (comma separated)","Allowed IPs (comma separated)"
