--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -299,6 +299,7 @@
 "Please enter your email address below. You will receive a link to reset your password.","Please enter your email address below. You will receive a link to reset your password."
 "Please enter your email below and we'll send you confirmation link for it.","Please enter your email below and we'll send you confirmation link for it."
 "Please make sure your passwords match.","Please make sure your passwords match."
+"Please select","Please select"
 "Please select a website which contains store view","Please select a website which contains store view"
 "Please select region, state or province","Please select region, state or province"
 "Prefix Dropdown Options","Prefix Dropdown Options"
