--- a/app/locale/en_US/Mage_Payment.csv
+++ b/app/locale/en_US/Mage_Payment.csv
@@ -50,6 +50,7 @@
 "Description","Description"
 "Edit","Edit"
 "Edit Restriction","Edit Restriction"
+"Edit Restriction '%s'","Edit Restriction '%s'"
 "Enabled","Enabled"
 "equals or greater than","equals or greater than"
 "equals or less than","equals or less than"
