--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -266,6 +266,7 @@
 "Customer Since:","Customer Since:"
 "Customer Tax Classes","Customer Tax Classes"
 "Customer with the same email already exists.","Customer with the same email already exists."
+"Custom Symbol","Custom Symbol"
 "Custom Variable ""%s""","Custom Variable ""%s"""
 "Custom Variables","Custom Variables"
 "Dashboard","Dashboard"
@@ -286,6 +287,7 @@
 "Default Config","Default Config"
 "Default display currency ""%s"" is not available in allowed currencies.","Default display currency ""%s"" is not available in allowed currencies."
 "Default scope","Default scope"
+"Default Symbol","Default Symbol"
 "Default Template from Locale","Default Template from Locale"
 "Default Values","Default Values"
 "Delete","Delete"
