--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -1,20 +1,27 @@
 "-- Please Select --","-- Please Select --"
 "Account Created In Store","Account Created In Store"
+"Action","Action"
+"Active","Active"
 "Added to Cart Date","Added to Cart Date"
 "Added to Wishlist Date","Added to Wishlist Date"
 "Add New Segment","Add New Segment"
+"Add New Sequence Step","Add New Sequence Step"
 "Address","Address"
 "Address Information","Address Information"
 "Add Segment","Add Segment"
 "Applied Promotion Rules","Applied Promotion Rules"
 "Are you sure?","Are you sure?"
+"Are you sure you want to delete this sequence step?","Are you sure you want to delete this sequence step?"
 "Are you sure you want to refresh this segment?","Are you sure you want to refresh this segment?"
 "Assign to Website","Assign to Website"
+"At least one email sequence is required when automation is enabled.","At least one email sequence is required when automation is enabled."
 "Automatic","Automatic"
 "Automatic: Refreshed daily via cron. Manual: Must be refreshed manually.","Automatic: Refreshed daily via cron. Manual: Must be refreshed manually."
 "Average Days Between Orders","Average Days Between Orders"
 "Average Order Value","Average Order Value"
+"Back to Segment","Back to Segment"
 "Base Row Total","Base Row Total"
+"Base Sales Rule","Base Sales Rule"
 "Bundle Product","Bundle Product"
 "Cart","Cart"
 "Cart Created Date","Cart Created Date"
@@ -22,10 +29,16 @@
 "Cart Status","Cart Status"
 "Cart Updated Date","Cart Updated Date"
 "Change status","Change status"
+"Choose when to trigger email sequences","Choose when to trigger email sequences"
 "Completed","Completed"
 "Conditions (leave blank for all customers)","Conditions (leave blank for all customers)"
 "Configurable Product","Configurable Product"
+"Count","Count"
+"Coupon expiration days","Coupon expiration days"
+"Coupon Generation Settings","Coupon Generation Settings"
+"Coupon Prefix","Coupon Prefix"
 "Customer","Customer"
+"Customer ID is required.","Customer ID is required."
 "Customer Lifetime Value","Customer Lifetime Value"
 "Customer Personal Information","Customer Personal Information"
 "Customer Segment","Customer Segment"
@@ -42,14 +55,46 @@
 "Days Since Registration","Days Since Registration"
 "Days Until Birthday","Days Until Birthday"
 "Days Without Purchase","Days Without Purchase"
+"Delay","Delay"
+"Delay (Minutes)","Delay (Minutes)"
+"Delay before sending","Delay before sending"
+"Delete","Delete"
 "Delete Segment","Delete Segment"
 "Delete Segments","Delete Segments"
+"Delete Sequence","Delete Sequence"
+"Disabled","Disabled"
 "Downloadable Product","Downloadable Product"
+"Edit","Edit"
+"Edit Email Sequence Step %d for ""%s""","Edit Email Sequence Step %d for ""%s"""
 "Edit Segment","Edit Segment"
 "Edit Segment '%s'","Edit Segment '%s'"
+"Edit Sequence","Edit Sequence"
+"Email Automation","Email Automation"
+"Email Automation Settings","Email Automation Settings"
+"Email Sequence Management","Email Sequence Management"
+"Email Sequences","Email Sequences"
+"Email Template","Email Template"
+"Email trigger must be set when automation is enabled.","Email trigger must be set when automation is enabled."
+"Enable/disable this sequence step","Enable/disable this sequence step"
+"Enable automatic email sequences for this segment","Enable automatic email sequences for this segment"
+"Enable Email Automation","Enable Email Automation"
+"Enter Segment","Enter Segment"
+"Error","Error"
+"Exit Segment","Exit Segment"
+"Expires After (Days)","Expires After (Days)"
+"Failed","Failed"
 "General Properties","General Properties"
+"Generate a unique coupon code for each customer","Generate a unique coupon code for each customer"
+"Generate Coupon","Generate Coupon"
+"Generate unique coupon","Generate unique coupon"
 "Grouped Product","Grouped Product"
+"hours","hours"
 "If %s %s %s","If %s %s %s"
+"Immediate","Immediate"
+"Invalid segment.","Invalid segment."
+"Invalid status.","Invalid status."
+"Invalid trigger type.","Invalid trigger type."
+"Is Active","Is Active"
 "Items Count","Items Count"
 "Items Quantity","Items Quantity"
 "Last Refreshed","Last Refreshed"
@@ -60,24 +105,39 @@
 "Lifetime Profit (Sales - Refunds)","Lifetime Profit (Sales - Refunds)"
 "Lifetime Refunds Amount","Lifetime Refunds Amount"
 "Lifetime Sales Amount","Lifetime Sales Amount"
+"Manage Email Sequences","Manage Email Sequences"
 "Manage Segments","Manage Segments"
 "Manual","Manual"
+"Metric","Metric"
+"minutes","minutes"
+"Minutes to wait before sending (0 = immediate, 60 = 1 hour, 1440 = 1 day)","Minutes to wait before sending (0 = immediate, 60 = 1 hour, 1440 = 1 day)"
 "Mode","Mode"
+"New Email Sequence Step for ""%s""","New Email Sequence Step for ""%s"""
 "New Segment","New Segment"
+"New Sequence","New Sequence"
 "Newsletter","Newsletter"
 "Newsletter Subscription","Newsletter Subscription"
+"Newsletter Template","Newsletter Template"
+"Newsletter template to use for this step","Newsletter template to use for this step"
 "None","None"
 "Not Active","Not Active"
+"Number of days until coupon expires (default: 30)","Number of days until coupon expires (default: 30)"
 "Number of Orders","Number of Orders"
 "Order","Order"
 "Order History","Order History"
+"Order in the email sequence (1, 2, 3...)","Order in the email sequence (1, 2, 3...)"
+"Pending","Pending"
 "Personal Information","Personal Information"
 "Please save the segment first.","Please save the segment first."
 "Please select...","Please select..."
 "Please select at least one website.","Please select at least one website."
 "Please select segment(s).","Please select segment(s)."
+"Prefix for coupon codes","Prefix for coupon codes"
+"Prefix for generated coupon codes (e.g., CART, WELCOME)","Prefix for generated coupon codes (e.g., CART, WELCOME)"
+"Processing","Processing"
 "Product: %s","Product: %s"
 "Product Type","Product Type"
+"Progress record already exists for this customer and sequence.","Progress record already exists for this customer and sequence."
 "Purchase Date","Purchase Date"
 "Quantity in Cart","Quantity in Cart"
 "Quantity Ordered","Quantity Ordered"
@@ -85,32 +145,61 @@
 "Refresh Segments","Refresh Segments"
 "Row Total","Row Total"
 "Row Total (Inc. Tax)","Row Total (Inc. Tax)"
+"Sales rule does not exist.","Sales rule does not exist."
+"Sales rule is not active.","Sales rule is not active."
+"Sales rule must be configured for specific coupon codes.","Sales rule must be configured for specific coupon codes."
+"Sales rule must have auto-generation enabled.","Sales rule must have auto-generation enabled."
+"Sales rule to base coupon on","Sales rule to base coupon on"
+"Sales rule to use as template for generated coupons","Sales rule to use as template for generated coupons"
 "Save and Continue Edit","Save and Continue Edit"
 "Save Segment","Save Segment"
 "Save Segments","Save Segments"
+"Save Sequence","Save Sequence"
+"Scheduled","Scheduled"
+"Segment ID is required.","Segment ID is required."
 "Segment Information","Segment Information"
 "Segment Name","Segment Name"
 "Segment name is required.","Segment name is required."
 "Segment Refresh Cron Schedule","Segment Refresh Cron Schedule"
+"Sent","Sent"
+"Sequence ID is required.","Sequence ID is required."
+"Sequence step %d: %s","Sequence step %d: %s"
+"Sequence Step Settings","Sequence Step Settings"
 "Shopping Cart","Shopping Cart"
 "Shopping Cart Information","Shopping Cart Information"
 "Simple Product","Simple Product"
+"Skipped","Skipped"
+"Statistics","Statistics"
 "Status Change Date","Status Change Date"
+"Step","Step"
+"Step Number","Step Number"
+"Step number must be greater than 0.","Step number must be greater than 0."
+"Subject","Subject"
 "Subscription Status","Subscription Status"
+"The email sequence has been deleted.","The email sequence has been deleted."
+"The email sequence has been saved.","The email sequence has been saved."
 "The segment has been deleted.","The segment has been deleted."
 "The segment has been refreshed.","The segment has been refreshed."
 "The segment has been saved.","The segment has been saved."
 "This segment no longer exists.","This segment no longer exists."
+"This sequence no longer exists.","This sequence no longer exists."
+"Total Emails","Total Emails"
 "Total of %d record(s) were deleted.","Total of %d record(s) were deleted."
 "Total of %d record(s) were updated.","Total of %d record(s) were updated."
 "Total Ordered Amount","Total Ordered Amount"
+"Trigger Event","Trigger Event"
 "Unable to find a segment to refresh.","Unable to find a segment to refresh."
+"Unable to generate unique coupon code after 10 attempts","Unable to generate unique coupon code after 10 attempts"
+"Unique Customers","Unique Customers"
 "View","View"
 "View Count","View Count"
 "View Customers in Segment","View Customers in Segment"
 "Viewed","Viewed"
 "Viewed Products","Viewed Products"
 "Virtual Product","Virtual Product"
+"When customer enters segment","When customer enters segment"
+"When customer exits segment","When customer exits segment"
+"When to Send Emails","When to Send Emails"
 "Wishlist","Wishlist"
 "Wishlist Items Count","Wishlist Items Count"
 "Wishlist Shared","Wishlist Shared"
